Initial logging work done, log4perl is working

--- a/flowTrack.conf
+++ b/flowTrack.conf
@@ -15,3 +15,6 @@ purge_interval: 43200
 
 # Port for the webserver
 web_port: 5656
+
+# Log4Perl Configuration file
+logging_conf: flowTrackLog.conf
