Cleaned up obejct creation (no need to specify the DB filename)

--- a/flowTrack.conf
+++ b/flowTrack.conf
@@ -1,22 +1,19 @@
 # Port to read for netflow
 netflow_port: 2055
 
-# Name of the database
-database_name: FlowTrack.sqlite
-
-# What do you consider your internal network
-internal_network: 192.168.1.0/24
-
-# Where to write data (database/logs/etc)
-data_dir: ./Data
+# Port for the webserver
+web_port: 5656
 
 # How many seconds to keep raw flows around
 purge_interval: 43200
 
-# Port for the webserver
-web_port: 5656
+# What do you consider your internal network
+internal_network: 192.168.1.0/24
 
-# Log4Perl Configuration file
+# Where to write data (data files, etc..)
+data_dir: ./Data
+
+# Log4Perl Configuration file  (Logging dir gets configured in flowTrackLog.conf)
 logging_conf: flowTrackLog.conf
 
 # Location of pid files
