Started the reporting module. Get summary information about recent flows Tests for above

--- a/flowTrack.conf
+++ b/flowTrack.conf
@@ -13,6 +13,11 @@ internal_network: 192.168.1.0/24
 # Where to write data (data files, etc..)
 data_dir: ./Data
 
+# Reporting interval in minutes  (how often to run the Reporting process (RRDs recent talkers etc))
+# If you change this after running you really should purge your RRDs  (strange things might happen)
+# (when RRD support is added)
+reporting_interval: 5
+
 # Log4Perl Configuration file  (Logging dir gets configured in flowTrackLog.conf)
 logging_conf: flowTrackLog.conf
 
