--- a/flowTrackLog.conf
+++ b/flowTrackLog.conf
@@ -1,5 +1,5 @@
 # Log everything to logs/flowTrack.log (for now, should split this up a bit later)
-log4perl.rootLogger=DEBUG, LOGFILE
+log4perl.rootLogger=INFO, LOGFILE
 
 log4perl.appender.LOGFILE=Log::Log4perl::Appender::File
 log4perl.appender.LOGFILE.filename=log/flowTrack.log
